[project]
name = "learnagents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "autogen-agentchat>=0.6.4",
    "autogen-core>=0.6.4",
    "autogen-ext[anthropic,gemini,ollama,openai]>=0.6.4",
    "chainlit>=2.6.2",
    "elevenlabs>=2.7.1",
]
